welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: not found: value compteur
  if(compteur+1%getMondeLargeur()==0)
     ^ZigZag:21: error: not found: value compteur
  if(compteur%getMondeLargeur()==0)
     ^