welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
def fin(compteur:Int):Boolean =
{
  if(getMondeHauteur()*getMondeLargeur()==compteur+1)
  {
    ecritMessage(compteur)
    return true
  }
  else
  {
    return false
  }
}

def avance2()
{
  var tourne:Boolean = false
  
  if(compteur+1%getMondeLargeur()==0)
  {
    tourne = true
  }
  if(compteur%getMondeLargeur()==0)
  {
    tourne = true
  }
  
  if((getX()==getMondeLargeur()-1)&&(tourne))
  {
    setPos(getX(),getY()+1)
  }
  else if((getX()==0)&&(tourne))
  {
    setPos(0,getY()+1)
  }
  else if(getY()%2==0)
  {
    setPos(getX()+1,getY())
  }
  else
  {
    setPos(getX()-1,getY())
  }
}

override def run()
{
  var compteur:Int = 0
  
  do
  {
    ecritMessage(compteur)
    avance2()
    compteur = compteur + 1
  }
  while(!fin(compteur))
}